# computer-graphics-lab

./: .clang-format  .gitignore  .ninja_log  CMakeLists.txt  build.ninja  vcpkg-configuration.json  vcpkg.json
include/: CGLab.hpp
src/: basic.cpp  bresenham_line.cpp  empty_display.cpp  impl_transforms_2d.cpp  main.cpp  rect.cpp  transforms_2d.cpp  transforms_3d.cpp  triangle.cpp
